# loquat-vc

./: Cargo.toml  Command-line Usage Documentation  Project Structure Documentation  README.md
examples/: keygen.rs  sign.rs  verify.rs
src/: lib.rs
src/crypto/: hash_functions.rs  legendre_prf.rs  merkle.rs  mod.rs  polynomial.rs  snark.rs
src/proof_system/: mod.rs  piop_compiler.rs  snark_integration.rs  univariate_sumcheck.rs
src/signature/: aggregate.rs  loquat.rs  mod.rs  ring_signature.rs
src/utils/: encoding.rs  field_operations.rs  mod.rs
